--- a/styles/style01.css
+++ b/styles/style01.css
@@ -2,8 +2,14 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Comic;
 }
+
 
 header{
     background-color: bisque;
+}
+
+footer{
+    display: none;
 }
