--- a/styles/style01.css
+++ b/styles/style01.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Comic;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -10,6 +10,27 @@ header{
     background-color: bisque;
 }
 
+main{
+    background-color: whitesmoke;
+
+}
+h2{
+    background-color: black;
+    color: white;
+    text-align: center;
+    margin: 2px
+    
+ }
+
+article{
+    display:block;
+}
+
+.logoMDHL{
+    width: 150px;
+    height: 150px;
+    object-fit: contain;
+}
 footer{
     display: none;
 }
