--- a/styles/style03.css
+++ b/styles/style03.css
@@ -3,50 +3,54 @@
     margin: 0;
     padding: 0;
   /*   border: 2px solid black; */
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 header{
-    background-image: url(../src/image1.jpg);
+    background-image: url(../src/image2.jpg);
     height: 400px;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 nav{
-    padding: 5px 20px 30px 20px;
+    padding: 10px 30px 10px 0px;    
     position:absolute;
-    top: 425px;
+    top: 50px;
+    right: 0px;
  }
-.navMenu{
-    padding: 20px 0px 10px 0px;
+ .navMenu{
     display: block;
+    width: 70px;
+    background-color: white;  
+    padding: 5px;
+    margin: 5px;
+    text-align: center;
+    color: black;    
 }
 .navMenu:focus{
     text-decoration: none;
 }
-.short{
+
+.long{
     display: none;
 }
 .encabezado{
-    text-align: left;
-    color: rgb(255, 251, 0);
+    background-color: white;
+    padding: 5px 30px 10px 0px;
+    text-align: right;
+    font-style: italic;
+    font-weight: 500;
+    color: black;
 }
 .logoMDHL{
-    width: 120px;
-    height: 120px;
-    background-color: white;
+    width: 150px;
+    height: 150px;
     object-fit: contain;
     position: absolute;
-    right: 80px;
-    top: 350px;    
+    left: 0px;
+    top: 50px;    
 }
-.portada{
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-}
-
 main{
     width: 100%;
     height: 400px;
@@ -57,13 +61,16 @@ main{
     width: 80%;
     padding-top: 20px;
     position: relative;
-    left: 200px;
+    left: 300px;
 }
 h2{
+    width: 200px;
     background-color: black;
     color: white;
     text-align: center;
     margin: 2px;
+    position: relative;
+    top: 15%;
  }
 
 article{
