--- a/styles/style02.css
+++ b/styles/style02.css
@@ -2,4 +2,78 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    /* border: 2px solid black; */
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+header{
+    background-image: url(../src/image1.jpg);
+    height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+} 
+
+nav{
+    padding: 5px 20px 30px 20px;
+    position:absolute;
+    top: 20px;
+    right: 5px
+ }
+.navMenu{
+    display: inline-block;
+    width: 70px; 
+    background-color: rgb(0, 68, 255);
+    box-shadow: 2px 2px 2px 1px grey;
+    padding: 5px;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+}
+.navMenu:focus{
+    background-color: green;
+}
+.long{
+    display: none;
+}
+.encabezado{
+    background-color: white;
+    text-align: left;
+    font-style: italic;
+    font-weight: 400;
+    color: black;
+}
+.logoMDHL{
+    width: 120px;
+    height: 120px;
+    background-color: white;
+    object-fit: contain;
+    position: absolute;
+    top: 460px;
+    left: 30px  
+}
+
+main{
+    width: 100%;
+    height: 400px;
+    background-color: whitesmoke;
+}
+
+.articleMain{
+    width: 80%;
+    padding-top: 20px;
+    position: relative;
+    left: 200px;
+}
+h2{
+    border: 1px solid black;
+    text-align: center;
+}
+
+article{
+    display:block;
+}
+
+
+footer{
+    display: none;
 }
