nav bar edited using flex

--- a/styles/style03.css
+++ b/styles/style03.css
@@ -14,6 +14,8 @@ header{
 }
 
 nav{
+    display: flex;
+    flex-direction: column;
     padding: 10px 30px 10px 0px;    
     position:absolute;
     top: 50px;
@@ -21,18 +23,19 @@ nav{
  }
  .navMenu{
     display: block;
-    width: 70px;
+    /* width: 70px; */
     background-color: white;  
     padding: 5px;
     margin: 5px;
     text-align: center;
+    text-decoration: none;
     color: black;    
 }
 .navMenu:focus{
-    text-decoration: none;
+    color: blue;
 }
 
-.long{
+.short{
     display: none;
 }
 .encabezado{
