--- a/styles/style03.css
+++ b/styles/style03.css
@@ -54,7 +54,7 @@ nav{
     left: 0px;
     top: 50px;    
 }
-main{
+.mainHome{
     width: 100%;
     height: 400px;
     background-color: whitesmoke;
@@ -66,7 +66,7 @@ main{
     position: relative;
     left: 300px;
 }
-h2{
+.h2home{
     width: 200px;
     background-color: black;
     color: white;
@@ -75,11 +75,53 @@ h2{
     position: relative;
     top: 15%;
  }
+ .h2long{
+    width: 80%;
+    text-align: center;
+ }
+ .rulesflex{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    height: 600px;
+    width: 80%;
+    padding-left: 60px;
+ }
+ .h3rules{
+    width: 80%;
+    text-align: center;
+ }
+ .p1Rules{
+    text-align: justify;    
+ }
+ .pfirstline{
+    text-indent: 30px;
+ }
+ .olRules{
+    padding-left: 15px;
+    text-align: justify;  
+ }
+ .alfabetico{
+    list-style-type: lower-alpha;
+ }
+ .desordenada{
+    padding-left: 60px;
+    text-indent: 10px;
+    list-style-type: circle;
+ }
+ .h3inline{
+    display: inline-block;
+ }
 
 article{
     display:block;
 }
-
+.mainSchedule{
+    display: flex;
+}
+.tabla{
+    width: 100%;
+}
 
 footer{
     display: none;
