--- a/styles/style03.css
+++ b/styles/style03.css
@@ -14,6 +14,8 @@ header{
 }
 
 nav{
+    display: flex;
+    flex-direction: column;
     padding: 10px 30px 10px 0px;    
     position:absolute;
     top: 50px;
@@ -21,18 +23,19 @@ nav{
  }
  .navMenu{
     display: block;
-    width: 70px;
+    /* width: 70px; */
     background-color: white;  
     padding: 5px;
     margin: 5px;
     text-align: center;
+    text-decoration: none;
     color: black;    
 }
 .navMenu:focus{
-    text-decoration: none;
+    color: blue;
 }
 
-.long{
+.short{
     display: none;
 }
 .encabezado{
@@ -51,7 +54,7 @@ nav{
     left: 0px;
     top: 50px;    
 }
-main{
+.mainHome{
     width: 100%;
     height: 400px;
     background-color: whitesmoke;
@@ -63,7 +66,7 @@ main{
     position: relative;
     left: 300px;
 }
-h2{
+.h2home{
     width: 200px;
     background-color: black;
     color: white;
@@ -72,11 +75,53 @@ h2{
     position: relative;
     top: 15%;
  }
+ .h2long{
+    width: 80%;
+    text-align: center;
+ }
+ .rulesflex{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    height: 600px;
+    width: 80%;
+    padding-left: 60px;
+ }
+ .h3rules{
+    width: 80%;
+    text-align: center;
+ }
+ .p1Rules{
+    text-align: justify;    
+ }
+ .pfirstline{
+    text-indent: 30px;
+ }
+ .olRules{
+    padding-left: 15px;
+    text-align: justify;  
+ }
+ .alfabetico{
+    list-style-type: lower-alpha;
+ }
+ .desordenada{
+    padding-left: 60px;
+    text-indent: 10px;
+    list-style-type: circle;
+ }
+ .h3inline{
+    display: inline-block;
+ }
 
 article{
     display:block;
 }
-
+.mainSchedule{
+    display: flex;
+}
+.tabla{
+    width: 100%;
+}
 
 footer{
     display: none;
