--- a/styles/style03.css
+++ b/styles/style03.css
@@ -66,6 +66,7 @@ nav{
     position: relative;
     left: 300px;
 }
+
 .h2home{
     width: 200px;
     background-color: black;
@@ -112,7 +113,34 @@ nav{
  .h3inline{
     display: inline-block;
  }
+.mainForm{
+    width: 70%;
+    padding-left: 60px;
+}
 
+ .h1Form{
+    text-align: center;
+ }
+.formName{
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+}
+.formMany{
+    display: flex;
+    justify-content: space-evenly;
+}
+fieldset{
+    border: 0;
+    padding: 10px;
+}
+
+.desordenadaForm{
+    padding-left: 30px;
+    padding-right: 30px;
+    text-indent: 10px;
+    list-style-type: none;
+ }
 article{
     display:block;
 }
