--- a/styles/style03.css
+++ b/styles/style03.css
@@ -184,3 +184,26 @@ th{
 .tdFoot{
     text-align: left;
 }
+/* Incorporar los mapas */
+.mapsflex{
+    display: flex;
+    justify-content: space-evenly; 
+    flex-wrap: wrap;
+    align-items: center;
+    height: 100vh;
+    background-image: url(../src/task1/image01.jpg);
+}
+
+.container_maps{
+    padding: 30px 0px 30px 0px; 
+    /* border: 1px solid black; */
+}
+.h2maps{
+    padding: 20px 0px 20px 0px;
+    background-color: blanchedalmond;
+    display: block;
+    text-align: left;
+}
+.h3maps{
+    background-color: rgb(143, 143, 143);
+}
